[tool.poetry]
name = "product_id"
version = "0.1.0"
description = "Product ID generation for PacBio products."
authors = ["Adam Blanchet <ab59@sanger.ac.uk>"]
license = "GPL3-or-later"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-schemaorg = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
